--- a/reactportfolio/src/pages/Portfolio/portfolio.css
+++ b/reactportfolio/src/pages/Portfolio/portfolio.css
@@ -1,18 +1,16 @@
 body{
     
+    position: relative; 
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    background: #ffffff;
-    
-}
-#plink_wrapper{
- margin: auto;
- padding-bottom: 20px;
- color: #2c0d2b;
+     
+  
 }
 
+ 
+ 
 .main-header{
     background: #2c0d2b;
-    border: 1px solid #2c0d2b;
+    border: 1px solid #cccccc;
     margin-top: 20px;
     padding-right: 20px;
     text-align: center;
@@ -20,24 +18,28 @@ body{
     margin-bottom: 0px;
     color:  #ffffff;
     border-radius: 3px;
-    border: solid 1px  #2c0d2b ;
+    border: solid 1px #2c0d2b ;
     border-radius: 20px;
     
 }
 
-.link_wrapper{
-    margin-top: 30px; 
-    word-spacing: 15px; 
-   
+
+
+
+#link_wrapper{
+    color: #2c0d2b;   
 }
+
+ 
 
 .box-set{
     box-sizing: border-box;
     width: 100%;
     border: 2px solid #dddddd;
      
-    padding-bottom: 15px;
 }
+
+ 
 
 .main{
     clear: both;
@@ -49,55 +51,94 @@ body{
     margin-top: 30px;
     margin-bottom: 30px;
     box-sizing: border-box;
-    border: solid 1px #2c0d2b;
+    
+    border: solid 1px #2c0d2b ;
     border-radius: 30px;
 }
 
 #sub_text{
     color: #2c0d2b;
-    margin: 10px;
+    margin: 0px;
     padding: 0px;
     padding-left: 0;
     font-family:  'Georgia', Times, 'Times New Roman', 'serif';
-    font-size:30px;
+
 }
-.line{
+
+#line{
     border-bottom: 2px solid #dddddd;
-
 }
 
-.P-img{
-    width: 250px;
-    float: left; 
-    padding-right:20px;
-    padding-top: 10px; 
-    
-}
+.icon{
 
-.decoration{
-    text-decoration: underline;
-    font-weight: bold;
-    
-}
-
-p{
-    font-weight: 40px;
-    color: #2c0d2b;
-    line-height: 170%;
-    padding-top: 10px;
-    padding-left: 0px;
-}
-
-.clearfix {
-    overflow: auto;
-  }
-   
-  .icon{
     background:#dddddd;
     margin-top: 10px;
 }
 
-  
+.all_images {
+    position: relative; 
+    display: inline-block;
+    border: 1px solid  #2c0d2b;
+    margin-top: 15px;
+    
+     
+}
+
+img{
+    width: 300px;
+    height: 250px;
+    padding: 15px; 
+    
+     
+}
+
+h6{
+    position: absolute;
+    /* bottom: 5px; */
+    background:  #2c0d2b;
+    padding: 20px;
+    height: 40px;
+    width: 270px;
+    margin:20px;
+    left: -5px;
+    /* padding-bottom: -20px; */ 
+    text-align: center;
+    color: white;
+    
+}
+
+
+p{
+    position: absolute;
+    bottom: 5px;
+    background:  #2c0d2b;
+    padding: 20px;
+    height: 40px;
+    width: 270px;
+    margin:20px;
+    left: -5px;
+    padding-bottom: -20px;
+    text-align: center;
+    color: white;
+    
+}
+
+#codelink_wrapper{
+    /* margin:  auto; */
+    text-align: center;
+    padding-top: 5px;
+    color: #2c0d2b;
+   }
+
+#plink_wrapper{
+    margin: 30px auto;
+    /* padding-bottom: 10px; */
+    color: #2c0d2b;
+    
+    /* margin-top: 20px; */
+   }
+
+    
 @media only screen 
 and (min-width: 769px)
 and (max-width: 1280px){
@@ -127,6 +168,7 @@ and (max-width: 768px){
          }
 }
  
+
     @media screen and (min-width:320px) and (max-width:640px) {
         .main-header{
             width: 100%;
@@ -142,17 +184,14 @@ and (max-width: 768px){
             font-size: 18px; 
             margin-top: -30px;   
         }
-         p{
-             display: inline;
-             max-width: 25%;
+       
              
-         }
+         
          .P-img{
              display: block;
              float: none;
-             margin: 10px auto !important; 
+             margin: 10px auto!important; 
              left: 30px;
-
              
          }
          .main{
