--- a/reactportfolio/src/pages/Portfolio/style.css
+++ b/reactportfolio/src/pages/Portfolio/style.css
@@ -2,8 +2,8 @@ body{
     
     position: relative; 
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-image: url(../../images/criss-cross.png);
     
-  
 }
 
 #heading{
@@ -88,8 +88,7 @@ body{
     display: inline-block;
     border: 1px solid  #2c0d2b;
     margin-top: 15px;
-    
-     
+  
 }
 
 img{
@@ -97,7 +96,6 @@ img{
     height: 250px;
     padding: 15px; 
     
-     
 }
 
 h6{
