--- a/reactportfolio/src/components/Footer/footer.css
+++ b/reactportfolio/src/components/Footer/footer.css
@@ -1,9 +1,20 @@
 
+.fas, .fab, .far{
+    color: white;
+    font-size: large;
+      
+}
 
+#plink_wrapper{
+    margin: auto;
+    padding-bottom: 20px;
+    color: #2c0d2b;
+     
+   }
  .footer{
     background: #2c0d2b;
     padding: 20px;
-    border-top: 8px solid #666666;
+    border-top: 10px solid #666666;
     text-align: center;
     flex-shrink: 0;
     margin-top: 0px;
