--- a/reactportfolio/src/components/Nav/navbar.css
+++ b/reactportfolio/src/components/Nav/navbar.css
@@ -4,9 +4,56 @@
     background:#2c0d2b;
     border-bottom: 8px solid #666666;
 }
+.main-header{
+    background: #2c0d2b;
+    border: 1px solid #2c0d2b;
+    margin-top: 20px;
+    padding-right: 20px;
+    text-align: center;
+    width: 370px;
+    margin-bottom: 0px;
+    color:  #ffffff;
+    border-radius: 3px;
+    border: solid 1px  #2c0d2b ;
+    border-radius: 20px;
+    
+}
 
 .a_link{
     color:#ffffff;
     font-size: 18px;
     text-decoration: none;
+}
+
+
+@media screen and (min-width:320px) and (max-width:640px) {
+    .main-header{
+        width: 100%;
+        text-align:center;
+        
+        
+    }
+    #link_wrapper {
+        width: 100%;
+        left: 0px;
+        text-align: center;
+        word-spacing: 15px;
+        font-size: 18px; 
+        margin-top: -30px;   
+    }
+   
+         
+     
+     .P-img{
+         display: block;
+         float: none;
+         margin: 10px auto!important; 
+         left: 30px;
+         
+     }
+     .main{
+         width: 420px;
+     }
+
+
 }
