--- a/reactportfolio/src/pages/About/about.css
+++ b/reactportfolio/src/pages/About/about.css
@@ -2,9 +2,9 @@ body{
     
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background: #ffffff;
+    background-image: url(../../images/criss-cross.png);
     
 }
-
 
 .main-header{
     background: #2c0d2b;
@@ -27,14 +27,6 @@ body{
    
 }
 
-.box-set{
-    box-sizing: border-box;
-    width: 100%;
-    border: 2px solid #dddddd;
-    background-image: url(/Portfolio/assets/images/criss-cross.png); 
-    padding-bottom: 15px;
-}
-
 .main{
     clear: both;
     border: 1px  #dddddd;
@@ -42,11 +34,11 @@ body{
     margin: 0 auto; 
     width: 900px;   
     padding-bottom: 0px; 
-    margin-top: 30px;
+    margin-top: 40px;
     margin-bottom: 30px;
     box-sizing: border-box;
-    border: solid 1px #2c0d2b;
-    border-radius: 30px;
+    border: solid 1px;
+    border-radius: 40px;
 }
 
 #sub_text{
@@ -58,16 +50,16 @@ body{
     font-size:30px;
 }
 .line{
-    border-bottom: 2px solid #dddddd;
+    border-bottom: 1px solid #dddddd;
 
 }
 
-.P-img{
+.rounded{
     width: 250px;
+    height: 250px;
     float: left; 
     padding-right:20px;
-    padding-top: 10px; 
-    
+    padding-top: 20px;   
 }
 
 .decoration{
@@ -79,10 +71,10 @@ body{
 p{
     font-weight: 40px;
     color: #2c0d2b;
-    line-height: 170%;
-    padding-top: 10px;
-    padding-left: 0px;
-}
+    line-height: 155%;
+    padding-top: 20px;
+    padding-left: 10px;
+ }
 
 .clearfix {
     overflow: auto;
